--- a/debian/rules
+++ b/debian/rules
@@ -77,7 +77,7 @@ else
 	DRI_DRIVERS += i915 i965
 	GALLIUM_DRIVERS += intel
   else ifneq ($(DEB_HOST_ARCH), s390)
-	DRI_DRIVERS += mach64 mga r128 r200 r300 r600 radeon savage tdfx
+	DRI_DRIVERS += mach64 mga nouveau r128 r200 r300 r600 radeon savage tdfx
     ifeq ($(DEB_HOST_ARCH_CPU), i386)
 	DRI_DRIVERS += i810 i915 i965 sis unichrome
 	GALLIUM_DRIVERS += intel
