Don't build Gallium radeon/nouveau on s390
Since we don't build any hardware DRI drivers
on s390, don't build any hardware Gallium drivers
on s390 either.

Also add some comments to explain what's going on.

--- a/debian/rules
+++ b/debian/rules
@@ -66,14 +66,13 @@ else
 	DIRECT_RENDERING = --enable-driglx-direct
 
   ifeq ($(DEB_HOST_ARCH_OS), linux)
-# These Gallium hardware drivers require libdrm-{nouveau,radeon},
-# respectively, which are currently only available on Linux
-	GALLIUM_DRIVERS += nouveau radeon
 # Although the KMS egl drivers will probably build on kfreebsd & hurd
 # only linux actually has KMS drivers implemented at this point.
 	EGL_DISPLAYS += kms
   endif
 
+# Several drivers for IGP chipsets are only useful on x86.
+# None of the drivers are useful on the s390 architecture.
   ifeq ($(DEB_HOST_ARCH), lpia)
 	DRI_DRIVERS += i915 i965
 # The intel Gallium driver requires libdrm-intel, which is currently
@@ -83,6 +82,11 @@ else
     endif
   else ifneq ($(DEB_HOST_ARCH), s390)
 	DRI_DRIVERS += mach64 mga nouveau r128 r200 r300 r600 radeon savage tdfx
+    ifeq ($(DEB_HOST_ARCH_OS), linux)
+# These Gallium hardware drivers require libdrm-{nouveau,radeon},
+# respectively, which are currently only available on Linux
+	GALLIUM_DRIVERS += nouveau radeon
+    endif
     ifeq ($(DEB_HOST_ARCH_CPU), i386)
 	DRI_DRIVERS += i810 i915 i965 sis unichrome
       ifneq ($(DEB_HOST_ARCH_OS), hurd)
