st/dri: factor out TFP support and add it to drisw
Factor out the TexBuffer extension into a common file
and share it between dri2 and drisw.

This gives swrastg/softpipe/llvmpipe support for
GLX_EXT_texture_from_pixmap - so it can be used to run
a composited desktop with pure software rendering.

(File copyright headers just blindly copied from dri2.c)

--- a/src/gallium/state_trackers/dri/drm/Makefile
+++ b/src/gallium/state_trackers/dri/drm/Makefile
@@ -17,6 +17,7 @@ C_SOURCES = \
 	dri_context.c \
 	dri_screen.c \
 	dri_drawable.c \
+	dri_extensions.c \
 	dri2.c
 
 #	$(TOP)/src/mesa/drivers/dri/common/utils.c \
