glsl: Add -lstdc++ linkage
Fixes "undefined reference to `__gxx_personality_v0'" error
when linking with a non-g++ compiler (e.g. llvm-clang).

--- a/src/glsl/Makefile
+++ b/src/glsl/Makefile
@@ -75,7 +75,8 @@ CXX_SOURCES = \
 
 LIBS = \
 	$(TOP)/src/glsl/libglsl.a \
-	$(shell pkg-config --libs talloc)
+	$(shell pkg-config --libs talloc) \
+	-lstdc++
 
 APPS = glsl_compiler glcpp/glcpp
 
