Move -lstdc++ to DRI_LIB_DEPS
Fixes "undefined reference to `operator new[](unsigned int)'"
error when linking classic drivers with a non-g++ compiler
(e.g. llvm-clang).

--- a/configure.ac
+++ b/configure.ac
@@ -855,7 +855,8 @@ if test "$mesa_driver" = dri; then
         [AC_MSG_ERROR([Expat required for DRI.])])
 
     # put all the necessary libs together
-    DRI_LIB_DEPS="$SELINUX_LIBS $LIBDRM_LIBS $EXPAT_LIB -lm -lpthread $DLOPEN_LIBS $TALLOC_LIBS"
+    DRI_LIB_DEPS="$SELINUX_LIBS $LIBDRM_LIBS $EXPAT_LIB -lm -lpthread \
+        $DLOPEN_LIBS $TALLOC_LIBS -lstdc++"
 fi
 AC_SUBST([DRI_DIRS])
 AC_SUBST([EXPAT_INCLUDES])
