--- a/src/mapi/glapi/gen/Makefile.am
+++ b/src/mapi/glapi/gen/Makefile.am
@@ -105,6 +105,7 @@ API_XML = \
 	ARB_map_buffer_range.xml \
 	ARB_robustness.xml \
 	ARB_sampler_objects.xml \
+	ARB_separate_shader_objects.xml \
 	ARB_seamless_cube_map.xml \
 	ARB_sync.xml \
 	ARB_texture_buffer_object.xml \
