glapi: add (part of) GL_ARB_viewport_array
These two entrypoints were also part of GL_EXT_direct_state_access.
This allows usage of the unsuffixed name in Mesa without angering
the auto-generated source.

--- a/src/mapi/glapi/gen/Makefile.am
+++ b/src/mapi/glapi/gen/Makefile.am
@@ -117,6 +117,7 @@ API_XML = \
 	ARB_vertex_array_object.xml \
 	AMD_draw_buffers_blend.xml \
 	ARB_vertex_type_2_10_10_10_rev.xml \
+	ARB_viewport_array.xml \
 	APPLE_object_purgeable.xml \
 	APPLE_vertex_array_object.xml \
 	ARB_uniform_buffer_object.xml \
